packages/ui/src/components/ESButton/ESButton.module.css
.button,
a.button {
  --spacing-horizontal-layout-gap: var(--esnet-size-spacing-xxsmall, 4px);

  --spacing-height-medium: 40px;
  --spacing-height-xxlarge: var(--esnet-size-spacing-xxlarge, 64px);

  --spacing-padding-horizontal: var(--esnet-size-spacing-large, 32px);
  --spacing-padding-vertical: var(--esnet-size-spacing-xxsmall, 4px);

  --spacing-border-radius: var(--esnet-size-radius-xxlarge, 18px);
  --spacing-border-width: var(--esnet-size-radius-small, 2px);

  --typography-font: var(
    --esnet-typography-button-1-sans-font,
    700 16px/120% var(--esnet-font-family-body-sans)
  );

  /* Layout */
  display: inline-flex;
  width: auto;
  padding: var(--esnet-size-border-width-medium, 4px)
    var(--esnet-size-spacing-medium, 16px);
  box-sizing: border-box;

  justify-content: center;
  align-items: center;
  gap: var(--spacing-horizontal-layout-gap);
  min-width: 44px;

  /* Styling */
  border-radius: var(--spacing-border-radius);
  border: var(--spacing-border-width) solid
    var(--esnet-color-core-blue-900, #004573);
  box-shadow: var(var(--esnet-box-shadow-core-light));

  /* Typography */
  color: var(--esnet-color-core-slate-900, #3f424d);
  text-align: center;

  font: var(--typography-font);

  line-height: normal;
  text-decoration: none;

  transition:
    background ease-in-out 200ms,
    border-color ease-in-out 200ms,
    box-shadow ease-in-out 200ms;

  /* Pseudo-events */

  &:hover {
    cursor: pointer;
    border-width: 3px; /* TODO: Find token solution */
    box-shadow: var(--esnet-box-shadow-core-medium);

    padding: var(--esnet-size-border-width-medium, 4px)
    calc(var(--esnet-size-spacing-medium, 16px) - 1px);
  }

  &:disabled {
    cursor: not-allowed;
  }

  /* Variants */
  &.primary {
    color: var(--esnet-color-light-surface-2, #f2f2f2);
    border-color: var(--esnet-color-core-slate-200, #acb0bf);
    background-color: var(--esnet-color-core-blue-700, #0075a2);

    &:hover,
    &:focus {
      border-color: var(--esnet-color-core-slate-100, #c3c7d9);
      background-color: var(--esnet-color-core-blue-500, #00a0d6);
    }

    &:active {
      border-color: var(--esnet-color-core-slate-200, #acb0bf);
      background-color: var(--esnet-color-core-blue-700, #0075a2);
    }

    &:disabled {
      /* TODO: Figure out how to represent these as solid colors */
      border-color: rgba(10, 72, 84, 0.3);
      background-color: rgba(0, 136, 181, 0.6);
    }

    /* Dark Mode */
    :global(.dark) & {
      border-color: var(--esnet-color-core-teal-900, #0a4854);
      background-color: var(--esnet-color-core-blue-600, #0088b5);
    }
  }

  &.secondary {
    border-color: var(--esnet-color-core-blue-900, #004573);
    background: var(--esnet-color-light-surface-2, #f2f2f2);

    &:hover,
    &:focus {
      border-color: var(--esnet-color-core-blue-600, #0088b5);
      background-color: var(--esnet-color-light-surface-2, #f2f2f2);
    }

    &:active {
      border-color: var(--esnet-color-core-blue-800, #00608c);
      background-color: var(--esnet-color-light-surface-1, #e3e3e3);
    }

    &:disabled {
      color: var(--esnet-color-core-slate-300, #9699a8);
      border-color: rgba(63, 66, 77, 0.2);
      background-color: var(--esnet-color-light-surface-1, #e3e3e3);
    }

    /* Dark Mode */
    :global(.dark) & {
      color: var(--esnet-color-dark-copy, #e6e6e6);
      border: var(--esnet-size-border-width-small, 2px) solid
        var(--esnet-color-dark-primary, #64d2ff);
      background: var(--esnet-color-dark-surface-1, #3d3d3d);

      &:hover,
      &:focus {
        border-color: var(--esnet-color-core-blue-200, #9ce2ff);
        background: var(--esnet-color-dark-surface-2, #4d4d4f);
      }

      &:active {
        border-color: var(--esnet-color-core-blue-400, #00b6f2);
        background-color: var(--background, #19191a);
        color: var(--esnet-color-core-blue-200, #9ce2ff);
      }

      &:disabled {
        color: var(--esnet-color-dark-copy-alt, #a8a8a8);
        border-color: var(--esnet-color-dark-copy-alt, #a8a8a8);
        background-color: var(--esnet-color-dark-surface-1, #3d3d3d);
      }
    }
  }

  &.branded {
    font: var(
      --esnet-typography-button-1-display-font,
      700 16px/100% var(--esnet-font-family-body-display)
    );

    line-height: 100%;

    --bg-graident-1: var(--esnet-color-core-blue-400, #00b6f2);
    --bg-graident-2: var(--esnet-color-core-blue-600, #0088b5);

    color: var(--esnet-color-light-surface-2, #f2f2f2);
    border-color: var(--esnet-color-core-slate-100, #c3c7d9);
    background: linear-gradient(
      180deg,
      var(--bg-graident-1) 0%,
      var(--bg-graident-2) 100%
    );

    &:hover,
    &:focus {
      border-color: var(--esnet-color-core-slate-100, #c3c7d9);
      --bg-graident-1: var(--esnet-color-core-blue-300, #64d2ff);
      --bg-graident-2: var(--esnet-color-core-blue-500, #00a0d6);
    }

    &:active {
      border-color: var(--esnet-color-core-slate-200, #acb0bf);
      --bg-graident-1: var(--esnet-color-core-blue-700, #0075a2);
      --bg-graident-2: var(--esnet-color-core-blue-500, #00a0d6);
    }

    &:disabled {
      border-color: #ccc;
      --bg-graident-1: rgba(0, 96, 140, 0.5);
      --bg-graident-2: rgba(0, 96, 140, 0.5);
    }
  }

  &.tertiary {
    background-color: rgba(0, 0, 0, 0);
    border-color: transparent;
    box-shadow: var(--esnet-box-shadow-core-none);

    &:hover,
    &:focus {
      background-color: var(--esnet-color-light-surface-2, #f2f2f2);
      box-shadow: var(--esnet-box-shadow-core-medium);
    }

    &:active {
      background-color: var(--esnet-color-light-surface-1, #e3e3e3);
      box-shadow: var(--esnet-box-shadow-core-medium-inset);
    }

    &:disabled {
      color: var(--esnet-color-core-slate-300, #9699a8);
      background-color: rgba(0, 0, 0, 0) !important;
      border-color: transparent !important;
    }

    /* Dark Mode */
    :global(.dark) & {
      color: var(--esnet-color-dark-copy, #e6e6e6);

      &:hover,
      &:focus {
        background-color: var(--esnet-color-dark-surface-2, #4d4d4f);
      }

      &:active {
        background-color: var(--esnet-color-dark-surface-1, #3d3d3d);
      }

      &:disabled {
        color: var(--esnet-color-dark-copy-alt, #a8a8a8);
        border-color: var(--esnet-color-dark-copy-alt, #a8a8a8);
        background-color: var(--esnet-color-dark-surface-1, #3d3d3d);
      }
    }
  }

  &.destructive {
    color: var(--esnet-color-core-white-200, #f2f2f2);
    border-color: var(--esnet-color-core-red-800, #8a0416);
    background-color: var(--esnet-color-core-red-600, #d61200);

    &:hover,
    &:focus {
      border-color: var(--esnet-color-core-red-700, #a6111b);
      background-color: var(--esnet-color-core-red-500, #eb3321);
    }

    &:active {
      border-color: var(--esnet-color-core-red-1000, #4d000d);
      background-color: var(--esnet-color-core-red-700, #a6111b);
    }

    &:disabled {
      color: var(--esnet-color-core-red-900, #6b0012);
      border-color: var(--esnet-color-core-red-700, #a6111b);
      background-color: var(--esnet-color-core-red-500, #eb3321);
    }
  }

  /* Modifiers */
  /* Width Options */

  &.fill {
    width: 100%;
  }

  &.nofill {
    width: auto;
  }

  /* Height Options */
  &.medium {
    min-height: var(--spacing-height-medium);
  }

  &.xxlarge {
    min-height: var(--spacing-height-xxlarge);
  }
}

